commented all project files
